objects/tffa__DependentProductEligibility__c.object
<CustomObject>
    <description>Captures parent-child relationship between financial products and set of included/excluded products sold together.</description>
    <fields>
        <fullName>tffa__DependentProductCode__c</fullName>
        <description>Unique product code of the Dependent product maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependent product code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DependentProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Dependent Product in the relationship</description>
        <label>Dependent Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Dependent Product</relationshipLabel>
        <relationshipName>DependentProductXrefs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the dependent product relationship is available</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete</description>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExcluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the dependent product cannot co-exist with the parent product in the submission</description>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product selection is mandatory and cannot be removed while applying</description>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <description>Reference to the parent financial product</description>
        <label>Financial Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Dependent Product Eligibilities</relationshipLabel>
        <relationshipName>ProductEligibilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dependent Product Eligibility</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependent Product Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>